- `gui/quickfort`: delete blueprints from the blueprint load dialog
- `quickfort`: new ``delete`` command for deleting player-owned blueprints (library and mod-added blueprints cannot be deleted)
- `gui/launcher`: refresh default tag filter when mortal mode is toggled in `gui/control-panel` so changes to which tools autocomplete take effect immediately

## Removed
- `max-wave`: merged into `pop-control`
- `devel/find-offsets`, `devel/find-twbt`, `devel/prepare-save`: remove development scripts that are no longer useful
- `fix/item-occupancy`, `fix/tile-occupancy`: merged into `fix/occupancy`

# 50.13-r2

## New Tools
- Updated for adventure mode: `gui/sandbox`, `gui/create-item`, `gui/reveal`
- `ghostly`: (reinstated) allow your adventurer to phase through walls
- `markdown`: (reinstated) export description of selected unit or item to a text file
- `adaptation`: (reinstated) inspect or set unit cave adaptation levels
- `fix/engravings`: fix corrupt engraving tiles
- `unretire-anyone`: (reinstated) choose anybody in the world as an adventurer
- `reveal-adv-map`: (reinstated) reveal (or hide) the adventure map
- `resurrect-adv`: (reinstated) allow your adventurer to recover from death
- `flashstep`: (reinstated) teleport your adventurer to the mouse cursor

## New Features
- `instruments`: new subcommand ``instruments order`` for creating instrument work orders

## Fixes
- `modtools/create-item`: now functions properly when the ``reaction-gloves`` tweak is active
- `quickfort`: don't designate multiple tiles of the same tree for chopping when applying a tree chopping blueprint to a multi-tile tree
- `gui/quantum`: fix processing when creating a quantum dump instead of a quantum stockpile
- `caravan`: don't include undiscovered divine artifacts in the goods list
- `quickfort`: fix detection of valid tiles for wells
- `combine`: respect container volume limits

## Misc Improvements
- `gui/autobutcher`: add shortcuts for butchering/unbutchering all animals