@@ -1,9 +1,10 @@
 --@ module=true
 
 local gui = require('gui')
-local textures = require('gui.textures')
-local widgets = require('gui.widgets')
 local overlay = require('plugins.overlay')
+local textures = require('gui.textures')
+local utils = require('utils')
+local widgets = require('gui.widgets')
 
 local function get_civ_alert()
     local list = df.global.plotinfo.alerts.list
@@ -35,30 +36,25 @@ local function clear_alarm()
     df.global.plotinfo.alerts.civ_alert_idx = 0
 end
 
-function set_civalert_burrow_if_unset(burrow)
+function add_civalert_burrow(id)
     local burrows = get_civ_alert().burrows
-    if #burrows == 0 then
-        burrows:insert('#', burrow.id)
-    end
+    utils.insert_sorted(burrows, id)
 end
 
-function unset_civalert_burrow_if_set(burrow)
+function remove_civalert_burrow(id)
     local burrows = get_civ_alert().burrows
-    if #burrows > 0 and burrows[0] == burrow.id then
-        burrows:resize(0)
+    utils.erase_sorted(burrows, id)
+    if #burrows == 0 then
         clear_alarm()
     end
 end
 
 local function toggle_civalert_burrow(id)
     local burrows = get_civ_alert().burrows
-    if #burrows == 0 then
-        burrows:insert('#', id)
-    elseif burrows[0] == id then
-        burrows:resize(0)
-        clear_alarm()
+    if utils.binsearch(burrows, id) then
+        remove_civalert_burrow(id)
     else
-        burrows[0] = id
+        add_civalert_burrow(id)
     end
 end
 
@@ -214,7 +210,7 @@ function Civalert:init()
             subviews={
                 widgets.WrappedLabel{
                     frame={t=0, r=0, h=2},
-                    text_to_wrap='Choose a burrow where you want your civilians to hide during danger.',
+                    text_to_wrap='Choose the burrow(s) where you want your civilians to hide during danger.',
                 },
                 widgets.HotkeyLabel{
                     frame={t=3, l=0},
@@ -260,8 +256,7 @@ local SELECTED_ICON = to_pen{ch=string.char(251), fg=COLOR_LIGHTGREEN}
 
 function Civalert:get_burrow_icon(id)
     local burrows = get_civ_alert().burrows
-    if #burrows == 0 or burrows[0] ~= id then return nil end
-    return SELECTED_ICON
+    return utils.binsearch(burrows, id) and SELECTED_ICON or nil
 end
 
 function Civalert:get_burrow_choices()
